Going global, from this prompt: Come up with a plan to go global, not just north america.  One critical issue, we may need different weather APIs for different parts of the world, so that needs to be researched.  Also, the UI will need ability to select countries (only show contries with ski resort -- all countries), and states (within that country selected or all states default) -- only states and countries that have ski resorts >= 10 lifts, note that a tram counts as a lift.
Search for all ski resorts in the world.  Limit to >= 10 lifs (or trams or T-bars or gondolas).  Only for those resorts, collect needed info for json data.

Also, the UI should have a permanent side bar on the left hand side.  The zoom in/out +/- widget shoudl move to upper rigth from upper left.  The left hand side bar should default to the top 10 ski resorts in the word measured by the currently selected snow filter.  Let's rename "View" to be "Snowfall".  If powder on the way is selected then top N will only be for that category, but if total is selected that top ten from historical + recent forcast form the score.  THe top N (10) list should show resort name and snow fall (column labeled by what filter selected).  Clicking on the left ski resort moves the map to center and zoom in on just that resort.

Report back with an implementation plan.  If we need to skip some countries for lack of data, then we could just skip them, but let me know which ones are being skipped.

--- a/powder/web/index.html
+++ b/powder/web/index.html
@@ -10,47 +10,62 @@
 <body>
     <header>
         <h1>Powder</h1>
-        <p class="subtitle">Ski Resort Snowfall Forecast</p>
+        <p class="subtitle">Global Ski Resort Snowfall Forecast</p>
     </header>
 
-    <div class="controls">
-        <div class="filter-group">
-            <label for="state-filter">State</label>
-            <select id="state-filter">
-                <option value="">All States</option>
-            </select>
-        </div>
-        <div class="filter-group">
-            <label for="pass-filter">Pass</label>
-            <select id="pass-filter">
-                <option value="">All Passes</option>
-                <option value="EPIC">EPIC</option>
-                <option value="IKON">IKON</option>
-                <option value="none">Independent</option>
-            </select>
-        </div>
-        <div class="filter-group">
-            <label for="snow-filter">View</label>
-            <select id="snow-filter">
-                <option value="forecast">Powder on the Way</option>
-                <option value="historical">Recent Powder</option>
-                <option value="total">Total Recent + Forecast</option>
-            </select>
-        </div>
-        <div class="legend">
-            <span class="legend-item">
-                <span class="bubble small"></span> 1-5"
-            </span>
-            <span class="legend-item">
-                <span class="bubble medium"></span> 6-12"
-            </span>
-            <span class="legend-item">
-                <span class="bubble large"></span> 13"+
-            </span>
+    <div class="main-container">
+        <aside id="sidebar-left" class="sidebar-left">
+            <h3>Top 10</h3>
+            <div id="top-resorts-list"></div>
+        </aside>
+
+        <div class="map-container">
+            <div class="controls">
+                <div class="filter-group">
+                    <label for="country-filter">Country</label>
+                    <select id="country-filter">
+                        <option value="">All Countries</option>
+                    </select>
+                </div>
+                <div class="filter-group">
+                    <label for="region-filter">Region</label>
+                    <select id="region-filter">
+                        <option value="">All Regions</option>
+                    </select>
+                </div>
+                <div class="filter-group">
+                    <label for="pass-filter">Pass</label>
+                    <select id="pass-filter">
+                        <option value="">All Passes</option>
+                        <option value="EPIC">EPIC</option>
+                        <option value="IKON">IKON</option>
+                        <option value="none">Independent</option>
+                    </select>
+                </div>
+                <div class="filter-group">
+                    <label for="snow-filter">Snowfall</label>
+                    <select id="snow-filter">
+                        <option value="forecast">Powder on the Way</option>
+                        <option value="historical">Recent Powder</option>
+                        <option value="total">Total Recent + Forecast</option>
+                    </select>
+                </div>
+                <div class="legend">
+                    <span class="legend-item">
+                        <span class="bubble small"></span> 1-5"
+                    </span>
+                    <span class="legend-item">
+                        <span class="bubble medium"></span> 6-12"
+                    </span>
+                    <span class="legend-item">
+                        <span class="bubble large"></span> 13"+
+                    </span>
+                </div>
+            </div>
+
+            <div id="map"></div>
         </div>
     </div>
-
-    <div id="map"></div>
 
     <div id="detail-panel" class="hidden">
         <button id="close-panel">&times;</button>
